 * graphics
   * missiles now take unit_height_adjust into account
   * improved layering system for terrain graphics
   * fixed terrain selection probabilites (patch #617)
   * stoned units do not use a separate cache
   * no more "darkened" cache. we now overlay terrain/darken.png
   * added the option to draw overlays on terrains filter by location, selected
     and mouseover hex
   * items with a halo have their halo hidden when under a shroud (bug #8523) 
   * terrain
     * added peaks to the impassable mountains
     * added bridges crossing swamp and deep water
     * added farmland
     * added elvish castle
   * unit art
     * added a recruit animation for Skeleton
     * new death animations: Orcish Assassin, Grunt, Undead Ghoul, Ancient Wose,
       Elder Wose, Thief
     * changed name on Dwarvish Warrior art files to Dwarvish Steelclad, to 
       conform to unit .cfg file name
     * new attack icons : undead axes, undead crossbow, pick axe, glaive,
       elven staff, mace-and-chain
     * new baseframes: all Mages, Footpad
     * new and changed animations:
       * Elvish Hero: melee attack
       * Elvish Sorceress line: magic shield
     * updated portraits: Troll
   * other images
     * animate-able campfire
     * crown icons for heros and expendable allied leaders
     * star shaped "ellipses" for leaders and hero units
     * updated and added many misc items
     * modified hex-grid
     * slightly modified logo
   * fix gryphon not being in the center of their hex
   * Fixed incorrect WML in some units causing female variations to use male
 * language and i18n:
   * updated translations: British English, Catalan, Czech, Danish, Dutch,
     Estonian, French, German, Greek, Italian, Polish, Russian, Serbian,
     Slovak, Swedish
   * updated DejaVuSans font to 2.15
   * fixed huge list of spelling mistakes in the en_US version
   * allow sighted messages to be translated with correct plural form
     (bug #8161)