@@ -45,7 +45,8 @@ Version 1.3-svn:
    * no more "darkened" cache. we now overlay terrain/darken.png
    * added the option to draw overlays on terrains filter by location, selected
      and mouseover hex
-   * items with a halo have their halo hidden when under a shroud (bug #8523) 
+   * items with a halo have their halo hidden when under a shroud (bug #8523)
+   * the visibility icon of an unit is now properly updated (bug #8107)
    * terrain
      * added peaks to the impassable mountains
      * added bridges crossing swamp and deep water
